syntax = "proto3";

option go_package = "holocron/pkg/proto";

package holocron;

// The greeting service definition.
service Holocron {
  // Sends a greeting
  rpc Insert (EmbeddingWithMetadataRequest) returns (InsertStatus) {}
  rpc Query(QueryRequest) returns (QueryResponse) {}
}

// The request message containing the user's name.
message EmbeddingWithMetadataRequest {
  string collection = 1;
  repeated double embedding = 2;
  map<string, string> metadata = 3;
}

// The response message containing the greetings
message InsertStatus {
  string message = 1;
}

message QueryRequest {
    repeated double embedding = 1;
    string collection = 2;
    int32 topK = 3;
}

message QueryResponse {
    repeated EmbeddingWithMetadataRequest embeddings = 1;
}